--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			{{ if .Site.Params.footerEnableContact }}
-			<div class="col-md-3 widget">
+			<div class="col-md-6 widget">
 				<h3 class="widget-title">Contact</h3>
 				<div class="widget-body">
 					<p>{{ if .Site.Params.phone }}{{ .Site.Params.phone }}<br>{{ end }}
@@ -15,7 +15,7 @@
 			{{ end }}
 
 			{{ if .Site.Params.footerEnableFollowme }}
-			<div class="col-md-3 widget">
+			<div class="col-md-6 widget">
 				<h3 class="widget-title">Follow me</h3>
 				<div class="widget-body">
 					<p class="follow-me-icons">
@@ -30,17 +30,16 @@
 			{{ end }}
 
 			{{ if .Site.Params.footerEnableTextWidget }}
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Text widget</h3>
+			<div class="col-md-6 widget">
+				<h3 class="widget-title">Company info</h3>
 				<div class="widget-body">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
+					<p>{{ if .Site.Params.orgid }}Org id: <a href="https://w2.brreg.no/enhet/sok/detalj.jsp?orgnr={{ .Site.Params.orgid }}">923354425</a>{{ end }}
 				</div>
 			</div>
 			{{ end }}
 
 			{{ if .Site.Params.footerEnableFormWidget }}
-			<div class="col-md-3 widget">
+			<div class="col-md-6 widget">
 				<h3 class="widget-title">Form widget</h3>
 				<div class="widget-body">
 					<p>{{ if .Site.Params.phone }}{{ .Site.Params.phone }}<br>{{ end }}
