--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -3,8 +3,8 @@
     <h2 class="section-title"><span>Services</span></h2>
 
     <div class="">
-        {{ range where .Site.RegularPages "Section" "service" }}
-            <div class="col-sm-6 col-md-4">
+        {{ range where (where .Site.RegularPages "Section" "service" ) ".Params.unlisted" "!=" "true" }}
+            <div class="col-sm-6 col-md-6">
                 <h3 class="text-center">{{ .Title }}</h3>
                 <p>{{ .Summary }}</p>
                 <p class="text-center"><a href="{{ .Permalink }}" class="btn btn-action">Read more</a></p>
